# algolithm-and-data-structure

./: .gitignore  README.md  sample.rb  sample004.rb  sample005.rb  sample009.rb  sample013.rb  sample015.rb  sample018.rb  sample019.rb  sample021.rb  sample023.rb  sample024.rb  sample025.rb  sample026.rb  sample027.rb  sample028.rb  sample031.rb
BootCampForBeginners/Easy/: abc-139-b  abc-139-b.cpp
BootCampForBeginners/Medium/: abc-065-b  abc-065-b.cpp
Leetcode/: 1.two-sum.cpp  13.roman-to-integer.cpp  9.palindrome-number.cpp
c++/: 105  105-practice  CMakeCache.txt  CMakeLists.txt  Makefile  atcoder  atcoder-market  atcoder-market-practice  atcoder-practice  average-length  average-length-practice  bitter-alchemy  break-number  c__  c__.cbp  cakes-and-donuts  cmake_install.cmake  counter-order  counter-order-practice  duplex-printing  eighth  fifth  first  forth  half-and-half  half-and-half-practice  how-many-ways  how-many-ways-practice  i18n  infinite-coins  insertion-sort  karaoke-practice  lucky-pin  lucky-pin-practice  maximum-difference  ninth  oldest-remains  rgb-cards  second  seventh  (+10 more)
c++/LeetCode/easy/: add-binary.cpp  climbing-stairs.cpp  implement-strStr.cpp  length-of-last-word.cpp  longest-common-prefix.cpp  maximum-strategy.cpp  merge-sorted-array.cpp  merge-two-sorted-lists.cpp  plus-one.cpp  remove-duplicates-from-sorted-array.cpp  remove-duplicates-from-sorted-list.cpp  remove-element.cpp  roman-to-integer.cpp  same-tree.cpp  search-insert-position.cpp  sqrt.cpp  two-sum.cpp  valid-parentheses.cpp
c++/LeetCode/medium/: lru-cache.cpp  merge-intervals.cpp  number-of-islands.cpp
c++/LeetCode/practice-sti/: splice.cpp
c++/LeetCode/practice-stl/: dfs.cpp  dfs2.cpp  map-playground.cpp  practice-queue.cpp  practice-unique.cpp  string-operation.cpp  unordered-map.cpp
c++/algolithm-and-data-structure/: bubble-sort.cpp  exhaustive-search.cpp  insertion-sort  insertion-sort.cpp  liner-search.cpp  merge-sort.cpp  queue  queue.cpp  stack  stack.cpp
c++/algolithm-and-data-structure-practice/: bubble-sort-practice.cpp  insertion-sort-practice.cpp
c++/all-serarch/: as-average-length.cpp
c++/atcoder-problems/easy/: alchemist.cpp  attack-survival.cpp  beautiful-string.cpp  bingo.cpp  bishop.cpp  can-you-solve-this.cpp  candy-distribution-again.cpp  caracal-vs-monster.cpp  chocolate.cpp  coins.cpp  collatz-problem.cpp  collecting-balls.cpp  cookie-exchanges.cpp  counter-balls.cpp  counter-order.cpp  divide-the-problems.cpp  exception-handler.cpp  five-dishes.cpp  foods-loved-by-everyone.cpp  go-to-school.cpp  increment-decrement.cpp  low-elements.cpp  next-prime.cpp  nice-shopping.cpp  postal-code.cpp  power-socket.cpp  prison.cpp  qualification-simulator.cpp  rally.cpp  range-product.cpp  replacing-integer.cpp  ruined-square.cpp  seven-five-four.cpp  shift-only.cpp  square-number.cpp  tax-rate.cpp  toll-gates.cpp  traveling-salesman-around-lake.cpp  varied.cpp
c++/atcoder-problems/medium/: agc040-a.cpp  bugged.cpp  check-points.cpp  choose-integers.cpp  colorful-leader-board.cpp  cut-and-count.cpp  grid-compression.cpp  grid-repainting.cpp  irreversible-operation.cpp  keyence-string.cpp  minesweeper.cpp  mod-sum.cpp  rgb-boxes.cpp  sentou.cpp  ss.cpp  takahashi-information.cpp  together.cpp  trained-practice.cpp  trained.cpp  traveling.cpp  write-and-erase.cpp
c++/atcoder-tenkei-90/: README.md  tenkei001.cpp
c++/first-ten-problems/: eighth.cpp  fifth.cpp  first.cpp  forth.cpp  ninth.cpp  second.cpp  seventh.cpp  sixth.cpp  tenth.cpp  third.cpp
c++/one-hundred-problems/: 105.cpp  atcoder-market.cpp  atcoder.cpp  average-length.cpp  counter-order.cpp  exhaustive-search.cpp  habatsu.cpp  how-many-ways.cpp  karaoke.cpp  lucky-pin.cpp  oldest-remains.cpp  select-mul.cpp  snuke-festival.cpp  switches.cpp  syagekio.cpp
c++/one-hundred-problems-practice/: 105-practice.cpp  atcoder-market-practice.cpp  atcoder-practice.cpp  average-length-practice.cpp  counter-order-practice.cpp  half-and-half-practice.cpp  how-many-ways-practice.cpp  karaoke-practice.cpp  switches-practice.cpp
c++/practice-bit/: test000.cpp  test001.cpp  test002.cpp  test003.cpp
c++/related-problems/: bitter-alchemy.cpp  break-number.cpp  cakes-and-donuts.cpp  duplex-printing.cpp  i18n.cpp  infinite-coins.cpp  making-triangle.cpp  many-formula.cpp  maximum-difference.cpp  otoshidama.cpp  rgb-cards.cpp  something-on-it.cpp  sum-of-three-integers.cpp  the-longest-distance.cpp  two-anagrams.cpp
golang/: sample.go
ruby/: sample001.rb  sample002.rb  sample003.rb  sample007.rb  sample008.rb  sample010.rb  sample011.rb  sample012.rb  sample014.rb  sample016.rb  sample017.rb  sample020.rb  sample022.rb  sample029.rb  sample030.rb  sample032.rb  sample033.rb
競技プログラミングの鉄則/: README.md
競技プログラミングの鉄則/1/: a-04  a-04.cpp  a-05  b-01  b-02  b-02.cpp  b-03.cpp  b-04  b-04.cpp  bit-operation  bit-operation.cpp
競技プログラミングの鉄則/1-1/: a-01  a-01.cpp  a-02  a-02.cpp  a-03  b-01.cpp
競技プログラミングの鉄則/2/: a-06
競技プログラミングの鉄則/chap01/: A01  A02.cpp  A03  A03.cpp  A06.cpp  A07  A07.cpp  A08  A08.cpp  B02.cpp  B03  B03.cpp
競技プログラミングの鉄則/hello-world/: hello-world
過去問精選10問/: README.md  abc-049-c.cpp  abc-0810a  abc-0810a.cpp  abc-085-b  abc-085-c  abc-086-a  abc-086-a.cpp  abc-086-c  abc-087-b  abc-088-b.cpp
過去問精選10問/01/類題/: abc-064-a.cpp  abc-088-a
過去問精選10問/02/: abc-082-b.cpp  abc-085-a.cpp
過去問精選10問/02/類題/: abc-069-b  abc-095-a.cpp
過去問精選10問/03/: abc-081-b  abc-081-b.cpp  abc-095-b.cpp
過去問精選10問/03/類題/: abc-053-b.cpp  abc-068-b  abc-072-b.cpp
過去問精選10問/04/: abc-087-b.cpp  abc-133-b.cpp
過去問精選10問/04/類題/: abc-105-b.cpp  abc-144-b  abc-175-b  abc-175-b.cpp
過去問精選10問/05/: abc-083-b  abc-083-b.cpp
過去問精選10問/05/類題/: agc-025-a  agc-025-a.cpp
過去問精選10問/06/: abc-088-b
過去問精選10問/06/類題/: abc-042-b  abc-042-b.cpp  abc-067-b
過去問精選10問/07/: abc-061-b.cpp
過去問精選10問/07/類題/: abc-061-b
過去問精選10問/08/: abc-085-b.cpp
過去問精選10問/08/類題/: arc-096-c.cpp
過去問精選10問/09/: abc-049-c.cpp
過去問精選10問/10/: abc-086-c.cpp
過去問精選10問/5/: abc-083-b.cpp
過去問精選10問/7/: abc-085-c.cpp
過去問精選10問/9/: abc-049-c
(+33 files in other folders)
