cmake_minimum_required(VERSION 3.16)
project(c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(c__ main.cpp)
add_executable(first first-ten-problems/first.cpp)
add_executable(second first-ten-problems/second.cpp)
add_executable(third first-ten-problems/third.cpp)
add_executable(forth first-ten-problems/forth.cpp)
add_executable(fifth first-ten-problems/fifth.cpp)
add_executable(sixth first-ten-problems/sixth.cpp)
add_executable(seventh first-ten-problems/seventh.cpp)
add_executable(eighth first-ten-problems/eighth.cpp)
add_executable(ninth first-ten-problems/ninth.cpp)
add_executable(tenth first-ten-problems/tenth.cpp)
add_executable(rgb-cards related-problems/rgb-cards.cpp)
add_executable(infinite-coins related-problems/infinite-coins.cpp)
add_executable(duplex-printing related-problems/duplex-printing.cpp)
add_executable(something-on-it related-problems/something-on-it.cpp)
add_executable(bitter-alchemy related-problems/bitter-alchemy.cpp)
add_executable(i18n related-problems/i18n.cpp)
add_executable(two-anagrams related-problems/two-anagrams.cpp)
add_executable(break-number related-problems/break-number.cpp)
add_executable(maximum-difference related-problems/maximum-difference.cpp)
add_executable(cakes-and-donuts related-problems/cakes-and-donuts.cpp)
add_executable(making-triangle related-problems/making-triangle.cpp)
add_executable(karaoke one-hundred-problems/karaoke.cpp)
add_executable(atcoder one-hundred-problems/atcoder.cpp)
add_executable(half-and-half one-hundred-problems/half-and-half.cpp)
add_executable(lucky-pin one-hundred-problems/lucky-pin.cpp)
add_executable(atcoder-market one-hundred-problems/atcoder-market.cpp)
add_executable(exhaustive-search algolithm-and-data-structure/exhaustive-search.cpp)
add_executable(habatsu one-hundred-problems/habatsu.cpp)
add_executable(test002 practice-bit/test002.cpp)

add_executable(bubble-sort algolithm-and-data-structure/bubble-sort.cpp)
add_executable(insertion-sort algolithm-and-data-structure/insertion-sort.cpp)
add_executable(insertion-sort-practice algolithm-and-data-structure-practice/insertion-sort-practice.cpp)
add_executable(bubble-sort-practice algolithm-and-data-structure-practice/bubble-sort-practice.cpp)
add_executable(stack algolithm-and-data-structure/stack.cpp)
add_executable(queue algolithm-and-data-structure/queue.cpp)
add_executable(the-longest-distance related-problems/the-longest-distance.cpp)
add_executable(sum-of-three-integers related-problems/sum-of-three-integers.cpp)
add_executable(otoshidama related-problems/otoshidama.cpp)
add_executable(many-formula related-problems/many-formula.cpp)
add_executable(liner-search algolithm-and-data-structure/liner-search.cpp)

add_executable(select-mul one-hundred-problems/select-mul.cpp)
add_executable(merge-sort algolithm-and-data-structure/merge-sort.cpp)
add_executable(trained atcoder-problems/medium/trained.cpp)
add_executable(irreversible-operation atcoder-problems/medium/irreversible-operation.cpp)
add_executable(agc040-a atcoder-problems/medium/agc040-a.cpp)
add_executable(ss atcoder-problems/medium/ss.cpp)
add_executable(two-sum LeetCode/easy/two-sum.cpp)
add_executable(lru-cache LeetCode/medium/lru-cache.cpp)
add_executable(splice LeetCode/practice-stl/splice.cpp)
add_executable(unordered-map LeetCode/practice-stl/unordered-map.cpp)
add_executable(merge-intervals LeetCode/medium/merge-intervals.cpp)
add_executable(dfs LeetCode/practice-stl/dfs.cpp)
add_executable(dfs2 LeetCode/practice-stl/dfs2.cpp)
add_executable(number-of-islands LeetCode/medium/number-of-islands.cpp)
add_executable(mod-sum atcoder-problems/medium/mod-sum.cpp)
add_executable(minesweeper atcoder-problems/medium/minesweeper.cpp)
add_executable(cut-and-count atcoder-problems/medium/cut-and-count.cpp)
add_executable(map-playground LeetCode/practice-stl/map-playground.cpp)
add_executable(string-operation LeetCode/practice-stl/string-operation.cpp)
add_executable(colorful-leader-board atcoder-problems/medium/colorful-leader-board.cpp)
add_executable(choose-integers atcoder-problems/medium/choose-integers.cpp)
add_executable(together atcoder-problems/medium/together.cpp)