cmake_minimum_required(VERSION 3.16)
project(c__)

set(CMAKE_CXX_STANDARD 14)

add_executable(c__ main.cpp)
add_executable(first first-ten-problems/first.cpp)
add_executable(second first-ten-problems/second.cpp)
add_executable(third first-ten-problems/third.cpp)
add_executable(forth first-ten-problems/forth.cpp)
add_executable(fifth first-ten-problems/fifth.cpp)
add_executable(sixth first-ten-problems/sixth.cpp)
add_executable(seventh first-ten-problems/seventh.cpp)
add_executable(eighth first-ten-problems/eighth.cpp)
add_executable(ninth first-ten-problems/ninth.cpp)
add_executable(tenth first-ten-problems/tenth.cpp)
add_executable(rgb-cards related-problems/rgb-cards.cpp)
add_executable(infinite-coins related-problems/infinite-coins.cpp)
add_executable(duplex-printing related-problems/duplex-printing.cpp)
add_executable(something-on-it related-problems/something-on-it.cpp)
add_executable(bitter-alchemy related-problems/bitter-alchemy.cpp)
add_executable(i18n related-problems/i18n.cpp)
add_executable(two-anagrams related-problems/two-anagrams.cpp)
add_executable(break-number related-problems/break-number.cpp)
add_executable(maximum-difference related-problems/maximum-difference.cpp)
add_executable(cakes-and-donuts related-problems/cakes-and-donuts.cpp)
add_executable(making-triangle related-problems/making-triangle.cpp)
add_executable(karaoke one-hundred-problems/karaoke.cpp)
add_executable(atcoder one-hundred-problems/atcoder.cpp)
add_executable(half-and-half one-hundred-problems/half-and-half.cpp)
add_executable(lucky-pin one-hundred-problems/lucky-pin.cpp)
add_executable(atcoder-market one-hundred-problems/atcoder-market.cpp)
add_executable(exhaustive-search algolithm-and-data-structure/exhaustive-search.cpp)
add_executable(habatsu one-hundred-problems/habatsu.cpp)
add_executable(test002 practice-bit/test002.cpp)

add_executable(bubble-sort algolithm-and-data-structure/bubble-sort.cpp)
add_executable(insertion-sort algolithm-and-data-structure/insertion-sort.cpp)
add_executable(insertion-sort-practice algolithm-and-data-structure-practice/insertion-sort-practice.cpp)
add_executable(bubble-sort-practice algolithm-and-data-structure-practice/bubble-sort-practice.cpp)
add_executable(stack algolithm-and-data-structure/stack.cpp)
add_executable(queue algolithm-and-data-structure/queue.cpp)
add_executable(the-longest-distance related-problems/the-longest-distance.cpp)
add_executable(sum-of-three-integers related-problems/sum-of-three-integers.cpp)
add_executable(otoshidama related-problems/otoshidama.cpp)
add_executable(many-formula related-problems/many-formula.cpp)
add_executable(liner-search algolithm-and-data-structure/liner-search.cpp)

add_executable(select-mul one-hundred-problems/select-mul.cpp)
add_executable(merge-sort algolithm-and-data-structure/merge-sort.cpp)
add_executable(trained atcoder-problems/medium/trained.cpp)
add_executable(irreversible-operation atcoder-problems/medium/irreversible-operation.cpp)
add_executable(agc040-a atcoder-problems/medium/agc040-a.cpp)
add_executable(ss atcoder-problems/medium/ss.cpp)
add_executable(two-sum LeetCode/easy/two-sum.cpp)
add_executable(lru-cache LeetCode/medium/lru-cache.cpp)
add_executable(splice LeetCode/practice-stl/splice.cpp)
add_executable(unordered-map LeetCode/practice-stl/unordered-map.cpp)
add_executable(merge-intervals LeetCode/medium/merge-intervals.cpp)
add_executable(dfs LeetCode/practice-stl/dfs.cpp)
add_executable(dfs2 LeetCode/practice-stl/dfs2.cpp)
add_executable(number-of-islands LeetCode/medium/number-of-islands.cpp)
add_executable(mod-sum atcoder-problems/medium/mod-sum.cpp)
add_executable(minesweeper atcoder-problems/medium/minesweeper.cpp)
add_executable(cut-and-count atcoder-problems/medium/cut-and-count.cpp)
add_executable(map-playground LeetCode/practice-stl/map-playground.cpp)
add_executable(string-operation LeetCode/practice-stl/string-operation.cpp)
add_executable(colorful-leader-board atcoder-problems/medium/colorful-leader-board.cpp)
add_executable(choose-integers atcoder-problems/medium/choose-integers.cpp)
add_executable(together atcoder-problems/medium/together.cpp)
add_executable(check-points atcoder-problems/medium/check-points.cpp)
add_executable(grid-compression atcoder-problems/medium/grid-compression.cpp)
add_executable(traveling atcoder-problems/medium/traveling.cpp)
add_executable(tenkei001 atcoder-tenkei-90/tenkei001.cpp)
add_executable(roman-to-integer LeetCode/easy/roman-to-integer.cpp)
add_executable(longest-common-prefix LeetCode/easy/longest-common-prefix.cpp)
add_executable(grid-repainting atcoder-problems/medium/grid-repainting.cpp)
add_executable(keyence-string atcoder-problems/medium/keyence-string.cpp)
add_executable(bugged atcoder-problems/medium/bugged.cpp)
add_executable(sentou atcoder-problems/medium/sentou.cpp)
add_executable(takahashi-information atcoder-problems/medium/takahashi-information.cpp)
add_executable(power-socket atcoder-problems/easy/power-socket.cpp)
add_executable(rally atcoder-problems/easy/rally.cpp)
add_executable(valid-parentheses LeetCode/easy/valid-parentheses.cpp)
add_executable(merge-two-sorted-lists LeetCode/easy/merge-two-sorted-lists.cpp)
add_executable(qualification-simulator atcoder-problems/easy/qualification-simulator.cpp)
add_executable(tax-rate atcoder-problems/easy/tax-rate.cpp)
add_executable(can-you-solve-this atcoder-problems/easy/can-you-solve-this.cpp)
add_executable(bishop atcoder-problems/easy/bishop.cpp)
add_executable(bingo atcoder-problems/easy/bingo.cpp)
add_executable(square-number atcoder-problems/easy/square-number.cpp)
add_executable(collecting-balls atcoder-problems/easy/collecting-balls.cpp)
add_executable(rgb-boxes atcoder-problems/medium/rgb-boxes.cpp)
add_executable(write-and-erase atcoder-problems/medium/write-and-erase.cpp)
add_executable(remove-duplicates-from-sorted-array LeetCode/easy/remove-duplicates-from-sorted-array.cpp)
add_executable(practice-unique LeetCode/practice-stl/practice-unique.cpp)
add_executable(remove-element LeetCode/easy/remove-element.cpp)
add_executable(implement-strStr LeetCode/easy/implement-strStr.cpp)
add_executable(traveling-salesman-around-lake atcoder-problems/easy/traveling-salesman-around-lake.cpp)
add_executable(search-insert-position LeetCode/easy/search-insert-position.cpp)
add_executable(cookie-exchanges atcoder-problems/easy/cookie-exchanges.cpp)
add_executable(replacing-integer atcoder-problems/easy/replacing-integer.cpp)
add_executable(maximum-strategy LeetCode/easy/maximum-strategy.cpp)
add_executable(length-of-last-word LeetCode/easy/length-of-last-word.cpp)
add_executable(plus-one LeetCode/easy/plus-one.cpp)
add_executable(divide-the-problems atcoder-problems/easy/divide-the-problems.cpp)
add_executable(add-binary LeetCode/easy/add-binary.cpp)
add_executable(sqrt LeetCode/easy/sqrt.cpp)
add_executable(go-to-school atcoder-problems/easy/go-to-school.cpp)
add_executable(climbing-stairs LeetCode/easy/climbing-stairs.cpp)
add_executable(remove-duplicates-from-sorted-list LeetCode/easy/remove-duplicates-from-sorted-list.cpp)
add_executable(alchemist atcoder-problems/easy/alchemist.cpp)
add_executable(toll-gates atcoder-problems/easy/toll-gates.cpp)
add_executable(merge-sorted-array LeetCode/easy/merge-sorted-array.cpp)
add_executable(collatz-problem atcoder-problems/easy/collatz-problem.cpp)
add_executable(next-prime atcoder-problems/easy/next-prime.cpp)
add_executable(same-tree LeetCode/easy/same-tree.cpp)
add_executable(practice-queue LeetCode/practice-stl/practice-queue.cpp)
add_executable(candy-distribution-again atcoder-problems/easy/candy-distribution-again.cpp)
add_executable(chocolate atcoder-problems/easy/chocolate.cpp)
add_executable(nice-shopping atcoder-problems/easy/nice-shopping.cpp)
add_executable(counter-order atcoder-problems/easy/counter-order.cpp)
add_executable(caracal-vs-monster atcoder-problems/easy/caracal-vs-monster.cpp)
add_executable(counter-balls atcoder-problems/easy/counter-balls.cpp)
add_executable(shift-only atcoder-problems/easy/shift-only.cpp)
add_executable(seven-five-four atcoder-problems/easy/seven-five-four.cpp)
add_executable(ruined-square atcoder-problems/easy/ruined-square.cpp)
add_executable(varied atcoder-problems/easy/varied.cpp)
add_executable(increment-decrement atcoder-problems/easy/increment-decrement.cpp)
add_executable(postal-code atcoder-problems/easy/postal-code.cpp)
add_executable(coins atcoder-problems/easy/coins.cpp)
add_executable(prison atcoder-problems/easy/prison.cpp)
add_executable(attack-survival atcoder-problems/easy/attack-survival.cpp)
add_executable(five-dishes atcoder-problems/easy/five-dishes.cpp)
add_executable(exception-handler atcoder-problems/easy/exception-handler.cpp)
add_executable(range-product atcoder-problems/easy/range-product.cpp)
add_executable(low-elements atcoder-problems/easy/low-elements.cpp)
add_executable(foods-loved-by-everyone atcoder-problems/easy/foods-loved-by-everyone.cpp)